apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    app: homer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
